<resources>
    <string name="app_name">Messenger App</string>

    <!-- button names -->
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="update">Update</string>

    <!-- hints -->
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="search">Search</string>
    <string name="message">Message</string>

    <!-- other -->
    <string name="todo">TODO</string>
    <string name="what_i_do">What I do</string>
    <string name="not_registered">Not registered?</string>

    <string name="person_name_template">Name Surname</string>
    <string name="message_preview_template">I will be at home in an hour</string>
    <string name="profession">Manager</string>

    <!-- nav bar icon titles -->
    <string name="nav_bar_home_icon">Home</string>
    <string name="nav_bar_settings_icon">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- toast messages -->
    <string name="empty_nickname_error">Please Enter Nickname</string>
    <string name="empty_password_error">Please Enter Password</string>
    <string name="empty_profession_error">Please Enter Profession</string>
    <string name="sign_up_error">Error during registration: This nickname is already used.</string>
    <string name="sign_in_error">Nickname or password was incorrect. Please try again.</string>
    <string name="connection_error">Connection error during request. Please try again later.</string>

</resources>