<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- avatar -->
    <ImageView
        android:id="@+id/search_page_avatar"
        android:layout_width="@dimen/main_page_avatar_width"
        android:layout_height="@dimen/main_page_avatar_height"
        android:layout_marginTop="@dimen/main_page_avatar_top_margin"
        android:layout_marginStart="@dimen/main_page_avatar_start_margin"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_image_placeholder" />

    <!-- person name -->
    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/main_page_person_name_text_size"
        android:textColor="@color/main_page_person_name_color"
        android:layout_marginStart="@dimen/main_page_person_name_start_margin"
        app:layout_constraintStart_toEndOf="@+id/search_page_avatar"
        app:layout_constraintTop_toTopOf="@+id/search_page_avatar"
        tools:text="@string/person_name_template" />

    <!-- profession -->
    <TextView
        android:id="@+id/profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profession_top_margin"
        android:textColor="@color/main_page_message_preview_color"
        android:textSize="@dimen/main_page_message_preview_text_size"
        app:layout_constraintStart_toStartOf="@+id/person_name"
        app:layout_constraintTop_toBottomOf="@+id/person_name"
        tools:text="@string/profession" />



</androidx.constraintlayout.widget.ConstraintLayout>