<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.sign_in.SignUpActivity">

    <!-- avatar -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/sign_up_avatar"
        android:layout_width="@dimen/avatar_width"
        android:layout_height="@dimen/avatar_height"
        android:layout_marginTop="@dimen/avatar_top_offset"
        android:src="@drawable/avatar_image_placeholder"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- nickname text field -->
    <EditText
        android:id="@+id/sign_up_nickname_text_field"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_fields_height"
        android:layout_marginStart="@dimen/text_fields_margins"
        android:layout_marginEnd="@dimen/text_fields_margins"
        android:layout_marginTop="@dimen/avatar_bottom_offset"
        android:background="@drawable/rounded"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/enter_your_nickname"
        android:textSize="@dimen/text_fields_text_size"
        android:autofillHints=""
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_avatar" />

    <!-- password text field -->
    <EditText
        android:id="@+id/sign_up_password_text_field"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_fields_height"
        android:layout_marginStart="@dimen/text_fields_margins"
        android:layout_marginEnd="@dimen/text_fields_margins"
        android:layout_marginTop="@dimen/password_text_field_top_offset"
        android:background="@drawable/rounded"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:autofillHints=""
        android:textSize="@dimen/text_fields_text_size"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_nickname_text_field"
        tools:ignore="TextFields" />

    <!-- what i do text field -->
    <EditText
        android:id="@+id/what_i_do"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_fields_height"
        android:layout_marginStart="@dimen/text_fields_margins"
        android:layout_marginEnd="@dimen/text_fields_margins"
        android:layout_marginTop="@dimen/what_i_do_top_offset"
        android:background="@drawable/rounded"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/what_i_do"
        android:textSize="@dimen/text_fields_text_size"
        android:autofillHints=""
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_text_field"
        tools:ignore="TextFields" />

    <!-- sign up button -->
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/what_i_do_bottom_offset"
        android:text="@string/sign_up"
        android:backgroundTint="@color/buttons_background_color"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_i_do" />

</androidx.constraintlayout.widget.ConstraintLayout>