<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    !-- avatar -->
    <ImageView
        android:id="@+id/login_avatar"
        android:layout_width="@dimen/avatar_width"
        android:layout_height="@dimen/avatar_height"
        android:layout_marginTop="@dimen/avatar_top_offset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_image_placeholder"
        android:contentDescription="@string/todo" />

    <!-- nickname text field -->
    <EditText
        android:id="@+id/login_nickname_text_field"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_fields_height"
        android:layout_marginStart="@dimen/text_fields_margins"
        android:layout_marginEnd="@dimen/text_fields_margins"
        android:layout_marginTop="@dimen/avatar_bottom_offset"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_avatar"
        android:background="@drawable/text_fields_shape"
        android:textSize="@dimen/text_fields_text_size"
        android:autofillHints="" />

    <!-- profession text field -->
    <EditText
        android:id="@+id/profession_text_field"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_fields_height"
        android:layout_marginStart="@dimen/text_fields_margins"
        android:layout_marginEnd="@dimen/text_fields_margins"
        android:layout_marginTop="@dimen/password_text_field_top_offset"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_nickname_text_field"
        android:background="@drawable/text_fields_shape"
        android:textSize="@dimen/text_fields_text_size"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <!-- update button -->
    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/profession_text_field_bottom_offset"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profession_text_field"
        android:textAlignment="center"
        android:backgroundTint="@color/buttons_background_color"/>


    <!-- sign out button -->
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/update_button_bottom_offset"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button"
        android:backgroundTint="@color/white"
        android:textColor="@color/black" />



</androidx.constraintlayout.widget.ConstraintLayout>