<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText"
    tools:context=".pages.home_page.fragments.settings.SettingsFragment">

    <!-- avatar -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_avatar"
        android:layout_width="@dimen/avatar_width"
        android:layout_height="@dimen/avatar_height"
        android:layout_marginTop="@dimen/avatar_top_offset"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar_placeholder" />

    <!-- nickname text field -->
    <EditText
        android:id="@+id/nickname_text_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_fields_height"
        android:layout_marginStart="@dimen/text_fields_margins"
        android:layout_marginEnd="@dimen/text_fields_margins"
        android:layout_marginTop="@dimen/avatar_bottom_offset"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center"
        android:background="@drawable/text_fields_shape"
        android:textSize="@dimen/text_fields_text_size"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar"
        tools:ignore="LabelFor" />


    <!-- profession text field -->
    <EditText
        android:id="@+id/profession_text_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_fields_height"
        android:layout_marginStart="@dimen/text_fields_margins"
        android:layout_marginEnd="@dimen/text_fields_margins"
        android:layout_marginTop="@dimen/password_text_field_top_offset"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center"
        android:background="@drawable/text_fields_shape"
        android:textSize="@dimen/text_fields_text_size"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_text_view"
        tools:ignore="LabelFor,TextFields" />

    <!-- update button -->
    <Button
        android:id="@+id/update_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="@dimen/profession_text_field_bottom_offset"
        android:text="@string/update"
        android:textAlignment="center"
        android:backgroundTint="@color/buttons_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profession_text_view" />

    <!-- sign out button -->
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="@dimen/update_button_bottom_offset"
        android:text="@string/sign_out"
        android:textColor="@color/login_page_sign_up_button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button"
        app:strokeColor="@color/login_page_sign_up_button_color"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

</androidx.constraintlayout.widget.ConstraintLayout>